--- a/css/style.css
+++ b/css/style.css
@@ -2,12 +2,19 @@
     box-sizing: border-box;
     font-family: 'Courier New', Courier, monospace;
 }
+body{
+    background-color: black;
+}
 
 header{
     display: flex;
     flex-direction: column;
     align-items: center;
     
+}
+
+h1{
+    color: white;
 }
 
 input{
@@ -42,24 +49,27 @@ section{
 }
 
 #toDo{
-    border: solid black 1.5px;
-    border-radius: 30px;
-    width: 30%;
+    border-radius: 20px;
+    width: 25%;
     height: 400px;
     margin-right: 50px;
-    
+    background-color: white;
+    background-image: radial-gradient(#8e8e8e 0.5px, #ffffff 0.5px);
+    background-size: 10px 10px;
 }
-#doing{
+/* #doing{
     border: solid black 1.5px;
     width: 30%;
     height: 400px;
     border-radius: 30px;
-}
+} */
 #done{
-    border: solid black 1.5px;
-    width: 30%;
+    width: 25%;
     height: 400px;
-    border-radius: 30px;
+    border-radius: 20px;
+    background-color: white;
+    background-image: radial-gradient(#8e8e8e 0.5px, #ffffff 0.5px);
+    background-size: 10px 10px;
     
 }
 
