--- a/css/style.css
+++ b/css/style.css
@@ -76,4 +76,9 @@ section{
 li{
     list-style-type: none;
     margin-top: 10px;
+    text-align: left;
+}
+
+.li-done{
+    text-align: center;
 }
